fix: Allow expansion of the header on small screens

--- a/frontend/src/app/general/navbar/header.component.css
+++ b/frontend/src/app/general/navbar/header.component.css
@@ -8,7 +8,7 @@
   background-color: #f5f5f5;
   justify-content: space-between;
   align-items: center;
-  height: 65px;
+  min-height: 65px;
 }
 
 #title {
